# cpp_playground

./: .clang-format  CMakeLists.txt  compile_flags.txt  decorator.cpp  expected.cpp  pixi.toml  vcpkg.json
include/: fixed_string.hpp
src/: concept_t.cpp  effective_cpp.cpp  fixed_string.cpp  generator.cpp  lambda_playground.cpp  map.txt  namedtuple.cpp  overloader.cpp  playground.cpp  range_playground.cpp  serialization_any.cpp  serialization_variant.cpp  static_map.cpp  std_variant.h  temp_playground.cpp  testing_fixed_string.cpp  testing_namedtuple.cpp  traits_playground.cpp  value_iteration.cpp
src/design_patterns/: CMakeLists.txt  abstract_factory.cpp  external_poly.cpp  factory_method.cpp
src/functional/: CMakeLists.txt  functional1.cpp
